[workspace]
members = [
    "chain-core",
    "chain-addr",
    "chain-storage",
    "chain-storage-sqlite",
    "chain-impl-mockchain",
    "cardano",
    "network-core",
    "network-grpc",
    "protocol",
    "protocol-tokio",
    "rest-server",
    "storage-units",
    "storage",
    "cardano-c",
    "ouroboros-praos",
    "exe-common",
]
