[package]
name = "blockchain"
version = "0.1.0"
authors = ["vincent.hanquez@iohk.io"]
license = "MIT"
description = "blockchain"
keywords = [ "Cardano", "BlockChain" ]

[build-dependencies]

[dependencies]
rcw = { path = "../rcw" }
wallet-crypto = { path = "../wallet-crypto" }
serde = "1.0"
serde_derive = "1.0"
ansi_term = "0.9"

[features]
with-bench = []
