[package]
name = "blockchain"
version = "0.1.0"
authors = ["vincent.hanquez@iohk.io"]
license = "MIT"
description = "blockchain"
keywords = [ "Cardano", "BlockChain" ]

[build-dependencies]

[dependencies]
rcw = { path = "../rcw" }
raw_cbor = { path = "../cbor" }
cardano = { path = "../cardano" }
serde = "1.0"
serde_derive = "1.0"

[features]
with-bench = []
