[package]
name = "cardano-c"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/hermes#README.md"
description = """
Exports simple API to use in C library or to write bindings in
other languages.
"""

[lib]
crate-type = ["staticlib", "dylib" ]

[dependencies]
cardano = { path = "../cardano" }
