[package]
name = "cardano-cli"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          ]

[dependencies]
termcolor = "1.0"
ansi_term = "0.11"
term_size = "0.3"
pbr = "1.0"
log = "0.4"
dirs = "1.0"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
rpassword = "2.0"
env_logger = "0.5.11"
humantime = "1.1"
cbor_event = { path = "../cbor_event" }
cryptoxide = { path = "../cryptoxide" }
cardano = { path = "../cardano" }
exe-common = { path = "../exe-common" }
storage = { path = "../storage" }

[dependencies.clap]
version = "2.32"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]
