[package]
name = "cardano-cli"
version = "0.1.0"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          ]

[dependencies]
console = "0.6.1"
dialoguer = { git = "https://github.com/primetype/dialoguer", rev = "bcd067b454bfc03b2a3dc5d4be314c9852265fac" }
indicatif = "0.9"
log = "0.4"
dirs = "1.0"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
env_logger = "0.5"
humantime = "1.1"
cbor_event = { path = "../cbor_event" }
cryptoxide = { path = "../cryptoxide" }
cardano = { path = "../cardano" }
exe-common = { path = "../exe-common" }
storage = { path = "../storage" }

[dependencies.clap]
version = "2.32"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]
