[package]
name = "cardano"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>", "The Rust-Crypto Project Developers"]
license = "MIT"
description = "A Rust implementation of cardano types and wallet"
keywords = [ "Cardano", "Wallet", "Crypto" ]

[build-dependencies]

[dependencies]
cryptoxide = { path = "../cryptoxide" }
cbor_event = { path = "../cbor_event" }

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.4"
serde_json = "*"
unicode-normalization = "0.1.7"

[features]
default = []
with-bench = []
generic-serialization = ["serde", "serde_derive"]
