[package]
name = "cardano"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/cardano#README.md"
description = """
The Cardano library. This includes full support for the Cardano blockchain and wallets. It also provides helpers to maintain HDWallets and includes a transaction build engine.
"""
keywords = [ "Cardano", "Wallet", "Crypto" ]

[build-dependencies]

[dependencies]
cryptoxide = "0.1"
cbor_event = "1.0"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.5"
serde_json = "1.0.31"
unicode-normalization = "0.1.7"
quickcheck = "0.7"

[features]
default = []
with-bench = []
generic-serialization = ["serde", "serde_derive"]
