[package]
name = "cbor_event"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>", "The Rust-Crypto Project Developers"]
license = "MIT"
readme = "README.md"
categories = ["binary", "cbor", "serialisation", "deserialisation", "cardano", "wasm"]
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano"
# documentation = "https://docs.rs/wasm-bindgen"
description = """
CBOR Event library, no dependencies, all platform and wasm compatible.
"""
