[package]
name = "chain-addr"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "Cardano", "Wallet", "Crypto", "Address" ]

[features]
property-test-api = ["quickcheck"]

[dependencies]
bech32 = "0.6"
chain-core = { path = "../chain-core" }
chain-crypto = { path = "../chain-crypto" }
cryptoxide = "0.1"
cfg-if = "0.1"
quickcheck = { version = "0.8", optional = true }
serde = "^1.0"
serde_derive = "^1.0"

[dev-dependencies]
quickcheck = "0.8"
chain-crypto = { path = "../chain-crypto", features = [ "property-test-api" ] }
