[package]
name = "exe-common"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]

[dependencies]
rcw = { path = "../rcw" }
wallet-crypto = { path = "../wallet-crypto" }
blockchain = { path = "../blockchain" }
storage = { path = "../storage" }
protocol = { path = "../protocol" }
log = "*"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"

futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

