[package]
name = "exe-common"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/exe-common#README.md"
description = """
Helpers and tools for the Cardano protocol. This includes keeping the blockchain synced and storing the blockchain locally.
"""

[dependencies]
cardano-storage = { path = "../storage" }
storage-units = { path = "../storage-units" }
protocol = { path = "../protocol" }
cbor_event = "1.0"
log = "*"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"

futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

[dependencies.cardano]
path = "../cardano"
features = [ "generic-serialization" ]
