[package]
name = "hermes"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>", "The Rust-Crypto Project Developers"]

[dependencies]
cryptoxide           = { path = "../cryptoxide" }
cardano       = { path = "../cardano" }
storage       = { path = "../storage" }
exe-common    = { path = "../exe-common" }

serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
log = "0.4"
env_logger = "0.5.9"
iron = "*"
router ="*"

[dependencies.clap]
version = "2.31"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]
