[package]
name = "protocol-tokio"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/protocol-tokio#README.md"
description = """
Cardano full node network protocol using rust's futures for asynchronous
network connection support.
"""
keywords = [ "blockchain", "protocol" ]

[dependencies]
cbor_event = "^2.1.1"
futures = "^0.1.25"
tokio-io = "^0.1.9"
tokio-codec = "^0.1.1"
bytes = "^0.4.10"
log   = "^0.4.5"

[dev-dependencies]
quickcheck = "^0.7.1"
env_logger = "^0.5.13"
tokio      = "^0.1.11"
