[package]
name = "protocol"
version = "0.1.0"
authors = ["vincent.hanquez@iohk.io"]
license = "MIT"
description = "protocol"
keywords = [ "Cardano", "Protocol" ]

[build-dependencies]

[dependencies]
cbor_event = { path = "../cbor_event" }
cardano = { path = "../cardano" }
log = "0.4"
num-traits = "0.2.5"
num-derive = "0.2.2"
