[package]
name = "protocol"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>", "The Rust-Crypto Project Developers"]
license = "MIT"
description = "protocol"
keywords = [ "Cardano", "Protocol" ]

[build-dependencies]

[dependencies]
cbor_event = { path = "../cbor_event" }
cardano = { path = "../cardano" }
log = "0.4"

[dev-dependencies]
rand = "*"
env_logger = "*"
