[package]
name = "protocol"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/protocol#README.md"
description = """
Cardano network protocol. Provides implementation to fetch blocks from a remote
node and to send transactions to a remote node.
"""
keywords = [ "Cardano", "Protocol" ]

[build-dependencies]

[dependencies]
cbor_event = "^2.1.2"
cardano = { path = "../cardano" }
log = "0.4"

[dev-dependencies]
rand = "0.6"
env_logger = "*"
