[package]
name = "storage-units"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/storage-units#README.md"
keywords = [ "Storage", "Immutable", "Append", "Git", "FileSystem" ]
description = """
blob storage using immutable/append-only files
"""

[dependencies]
rand = "0.5"
cryptoxide = "0.1"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = []
generic-serialization = ["serde", "serde_derive"]
