[package]
name = "cardano-storage"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/storage#README.md"
keywords = [ "Cardano", "Storage", "Immutable", "FileSystem" ]
description = """
The Cardano storage library. It provides two different levels of functionality; from low level
fast immutable or append only file without any assumption about the data, to a higher level that is
intertwined with the Cardano blockchain itself.
"""

[dependencies]
cardano = { path = "../cardano" }
cbor_event = "^2.1.1"
storage-units = { path = "../storage-units" }
log = "*"
rand = "0.6"
linked-hash-map = "0.5.1"
