[package]
name = "ariadne"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT"
description = "Wallet CLI interface"
keywords = [ "Cardano", "Wallet", "cli" ]

[dependencies]
rcw = { path = "../rcw" }
raw_cbor = { path = "../cbor" }
cardano = { path = "../cardano" }
protocol = { path = "../protocol" }
blockchain = { path = "../blockchain" }
storage = { path = "../storage" }
exe-common = { path = "../exe-common" }
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
ansi_term = "0.9"
log = "0.4"
env_logger = "0.5.9"
termion = "1.5"
flate2 = "1.0.1"

[dependencies.clap]
version = "2.31"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]
