[package]
name = "ariadne"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT"
description = "Wallet CLI interface"
keywords = [ "Cardano", "Wallet", "cli" ]

[dependencies]
rcw = { path = "../rcw" }
cbor_event = { path = "../cbor_event" }
cardano = { path = "../cardano" }
protocol = { path = "../protocol" }
storage = { path = "../storage" }
exe-common = { path = "../exe-common" }
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
ansi_term = "0.9"
log = "0.4"
env_logger = "0.5.9"
flate2 = "1.0.1"
console = "0.6.1"
dialoguer = "0.1.0"

[dependencies.clap]
version = "2.31"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]
