[package]
name = "wallet-crypto"
version = "0.1.0"
authors = ["vincent.hanquez@iohk.io"]
license = "MIT"
description = "A Rust implementation of cardano wallet"
keywords = [ "Cardano", "Wallet" ]

[build-dependencies]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
bit-vec = "0.5"
bitreader = "0.3"
rcw = { path = "../rcw" }

[dev-dependencies]
rand = "0.4"
serde_json = "*"
